[package]
name = "exum"
version = "0.1.1"
edition = "2024"
description = "A lightweight Axum syntax sugar library"
license = "MIT"
repository = "https://github.com/isyuah/exum"

[dependencies]
axum = "0.8.6"
inventory = "0.3.21"
exum_macros = "0.1.2"
tokio = "1.47.1"
toml = "0.9.7"
serde = {version = "1.0.228", features = ["derive"]}

[workspace]
members = ["exum_macros", "."]

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
exum = {path = ".", features = ["full"]}

[features]
default = []
deref-app = []
full = ["deref-app"]
