[package]
name = "exum"
version = "0.1.6"
edition = "2024"
description = "A lightweight Axum syntax sugar library"
license = "MIT"
repository = "https://github.com/isyuah/exum"

[dependencies]
axum = "0.8.6"
inventory = "0.3.21"
exum_macros = "0.1.3"
tokio = "1.47.1"
toml = "0.9.7"
serde = {version = "1.0.228", features = ["derive"]}
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["fs"], optional = true}



[workspace]
members = ["exum_macros", "."]

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
exum = {path = ".", features = ["full"]}

[features]
default = []
deref_app = []
app_chain_ext = []
app_chain_ext_full = ["app_chain_ext", "tower-http"]
full = ["deref_app", "app_chain_ext_full"]
