[package]
name = "exum"
version = "0.2.0"
edition = "2024"
description = "A lightweight Axum syntax sugar library"
license = "MIT"
repository = "https://github.com/isyuah/exum"

[dependencies]
axum = "0.8.6"
inventory = "0.3.21"
exum_macros = "0.2.0"
tokio = "1.47.1"
toml = "0.9.7"
serde = {version = "1.0.228", features = ["derive"]}
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["fs", "cors"]}
percent-encoding = "2.3.2"
mime_guess = {version = "2.0.5", optional = true}
httpdate = "1.0.3"
tokio-util = {version = "0.7.16", features = ["io"]}
tracing = "0.1.41"



[workspace]
members = ["exum_macros", "."]

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
exum = {path = ".", features = ["full"]}
serde_json = "1.0.145"

[features]
default = []
deref_app = []
app_chain_ext = []
layers = ["mime_guess"]
app_chain_ext_full = ["app_chain_ext"]
full = ["app_chain_ext_full", "layers"]
