[package]
name = "exum_macros"
version = "0.2.0"
edition = "2024"
description = "Macros for Exum (Axum syntax sugar)"
license = "MIT"
repository = "https://github.com/isyuah/exum"

[lib]
proc-macro = true

[dependencies]
axum = "0.8.6"
inventory = "0.3.21"
proc-macro2 ="1.0.101"
quote = "1.0.41"
syn = {version = "2.0.106", features = ["full"]}
convert_case = "0.8.0"
percent-encoding = "2.3.2"
